web: fix the pinned carousel layout issue
fixed the issue where in small screens all items did not fit on the card. Implemented short date so all fits on the card

--- a/web/app/globals.css
+++ b/web/app/globals.css
@@ -3,6 +3,7 @@
 @theme {
   --color-primary: #f3f4f6;
   --font-primary: "Russo One", sans-serif;
+  --breakpoint-xs: 26rem;
 }
 
 html,
@@ -43,4 +44,3 @@ body {
 ::-webkit-scrollbar {
   display: none;
 }
-
